<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dailydiary.dailydiaryalphav003.Launch"
    android:background="@color/background"
    android:id="@+id/login_layout"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_text_login"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:background="#ebefef"
            android:gravity="center"
            android:hint="@string/app_login_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="125dp"
            android:background="#628ca6"
            android:text="@string/app_login_button"
            android:textColor="@color/white"
            android:textSize="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/help_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#628ca6"
            android:text="@string/help_btn"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>
