<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:paddingBottom="3dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edit_tw_alert"
            android:textSize="35sp"
            android:padding="10dp"
            android:background="@color/white"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp">

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Главная мысль дня"
            android:paddingVertical="15dp" />

        <EditText
            android:id="@+id/underTitle_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Описание Вашего дня"
            android:paddingVertical="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_rating_day"
                android:textSize="25dp"
                android:textStyle="bold|italic"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:id="@+id/rating_bar_edit"
                android:clickable="true"
                android:stepSize="1.0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">

                <Button
                    android:id="@+id/btnAdd_cancel"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_btn_shape"
                    android:text="@string/edit_cancel"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <Button
                        android:id="@+id/btnAdd_edit"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_btn_shape"
                        android:text="@string/add_btn_alert"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
