<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:paddingBottom="3dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_tw_alert"
            android:textSize="35sp"
            android:padding="10dp"
            android:background="@color/white"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp">

        <EditText
            android:id="@+id/titlee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Главная мысль дня"
            android:paddingVertical="15dp" />

        <EditText
            android:id="@+id/underTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Описание Вашего дня"
            android:paddingVertical="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_rating_day"
                android:textSize="25dp"
                android:textStyle="bold|italic"/>

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:numStars="5"
                android:rating="1.0"
                android:stepSize="1.0" />
        </LinearLayout>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/add_btn_alert"
            android:textSize="20sp"
            android:background="@drawable/add_btn_shape"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>